--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: ruby
 rvm:
   - 2.3.1
 script: "bundle exec rspec"
+services: mysql
+before_install:
+  - mysql -e 'CREATE DATABASE task-manager_test;'
