--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,4 @@ test:
   password:
 
 production:
-  <<: *default
-  database: task-manager_production
-  username: task-manager
-  password: <%= ENV['TASK-MANAGER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
